<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_btn_label">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_repo_btn_label">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download_btn_label">Retrofit - Typesafe HTTP client for Android and Java by Square, Inc.</string>
    <string name="button_download_initial_text">Download</string>
    <string name="please_select_an_option">Please select an option first.</string>
    <string name="notification_action">Check the status.</string>
    <string name="file_name_label_txt">File Name:</string>
    <string name="status_label_txt">Status:</string>
    <string name="ok_button_label">OK</string>
    <string name="failed_status">Failed</string>
    <string name="success_status">Success</string>
    <string name="download_completed">Download Completed</string>
</resources>
