<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/download_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:background="@color/design_default_color_primary"
        android:contentDescription="Download Icon"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/files_to_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/stat_sys_download"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/files_to_download"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:checkedButton="@id/glide_download_button"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/glide_download_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_btn_label" />

        <RadioButton
            android:id="@+id/load_app_repo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_app_repo_btn_label" />

        <RadioButton
            android:id="@+id/retrofit_download_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_download_btn_label" />
    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:btnBackground="@color/colorPrimary"
        app:btnTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>